add sections for suggestions, requests, invitations; expand on clerk components

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -34,7 +34,7 @@ Roles determine a user's level of access and permissions within an organization.
 
 There is no limit to the number of organizations a user can be a member of.
 
-However, there is a limit to how many members total can be in a single organization. By default, the membership limit is set to 3 members. To change this limit, scroll to the **Default membership limit** section and update the membership limit.
+However, there is a limit to how many members total can be in a single organization. By default, the membership limit is set to 5 members. To change this limit, scroll to the **Default membership limit** section and update the membership limit.
 
 If you are on the Free plan, you can update the membership limit to a maximum of 5 members.
 
@@ -53,7 +53,21 @@ By default, organizations are deletable. Any member with the "Delete organizatio
 
 ### Verified domains
 
-Verified domains can be used to streamline enrollment into an organization. For example, if the domain `@clerk.com` is verified, any user with an email address ending in `@clerk.com` can be automatically invited or be suggested to join an organization with that domain. This feature is useful for organizations that want to restrict membership to users with specific email domains. See the [verified domains](/docs/organizations/verified-domains) documentation for more information.
+Verified domains can be used to streamline enrollment into an organization. For example, if the domain `@clerk.com` is verified, any user with an email address ending in `@clerk.com` can be automatically invited or be suggested to join an organization with that domain. This feature is useful for organizations that want to restrict membership to users with specific email domains. See the [Verified domains](/docs/organizations/verified-domains) documentation for more information.
+
+#### Suggestions
+
+Organizations can be suggested to users with email addresses that match the organization's verified domain(s). Suggestions are useful for organizations that want to streamline the enrollment process for users with specific email domains.
+
+For example, if the domain `@clerk.com` is the verified domain for an organization, any user with an email address ending in `@clerk.com` will be automatically suggested to join the organization.
+
+To allow suggestions in your application, you must first enable the feature in the Clerk Dashboard. See the [Verified domains](/docs/organizations/verified-domains#enable-verified-domains) guide for more information.
+
+Once enabled for your application, when an organization admin is creating a verified domain in your application, they are able to enable suggestions for that domain.
+
+#### Membership requests
+
+Membership requests are requests from users who want to join the organization. A membership request is created when a user sees a suggestion to join an organization and clicks the **Request to join** button. Therefore, membership requests are only available for organizations that have the [**Verified domains** feature enabled](#verified-domains) and the [**Automatic suggestions** feature enabled in both the Dashboard and for the specific domain](#suggestions).
 
 ## Active organization
 
@@ -65,30 +79,35 @@ When a user signs in to your application, they are viewing their personal accoun
 
 The easiest way to allow users to switch between their personal account and their organization account is to use Clerk's [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component. Once a user selects an organization, that organization is set as the active organization.
 
+## Organization invitations
+
+Organization invitations are a way to invite users to join an organization. When a user is invited to an organization, they will receive an email with a link to accept the invitation. Once they accept the invitation, they will be added as a member of the organization.
+
+By default, only admins can invite users to an organization.
+
+This feature requires that **Email address** is enabled as an [identifier](/docs/authentication/configuration/sign-up-sign-in-options#identifiers), as Clerk uses the user's email address to send the invitation.. You can still disable **Email address* as an authentication option if you don't want users to be able to sign-in with their email address.
+
+To configure your application's **Email address** settings:
+
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username).
+2. In the navigation sidebar, select **User & Authentication > Email, Phone, Username**.
+3. In the **Contact information** section, ensure that **Email address** is toggled on.
+4. Next to **Email address**, select the settings cog icon to configure the email address settings. Here, at least **Require** should be toggled on.
+
 ## Organization management
+
+As the application owner, you have full control over the organizations within your application. You can create, update, and delete organizations, as well as manage their members and settings.
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations).
 2. In the navigation sidebar, select **Organizations**. Here, you can view and manage all organizations within your application - both those created by you and those create by your users.
 3. Select a specific organization to view its details, members, and settings. Here, you can update the organization's name, slug, and logo. You can also set the organization's [membership limit](#how-many-organizations-can-i-create) and public and private metadata.
 
-### User membership management
-
-Clerk provides a set of prebuilt components to help your users manage their organization memberships:
+For managing organizations and their members in your application, Clerk provides a set of [prebuilt components](/docs/components/overview):
 
 - [`<CreateOrganization />`](/docs/components/organization/create-organization) - A form for a user to create a new organization.
-- [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization. Out of the box, this component's **General** tab displays the organization's information and the **Leave organization** option. The **Members** tab shows the organization's members along with their join dates and roles.
-- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s).
+- [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization. Out of the box, this component's **General** tab displays the organization's information and the **Leave organization** button. Admins will be able to see the **Update profile** button, **Verified domains** section, and **Delete organization** button. The **Members** tab shows the organization's members along with their join dates and roles. Admins will have the ability to invite a member, change a member's role, or remove them from the organization. Admins will have tabs within the **Members** tab to view the organization's invitations and requests.
+- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s). Out of the box, this component will show notifications to the user if they have organization invitations or suggestions. Admins will be able to see notifications for requests to join an organization.
 - [`<OrganizationList />`](/docs/components/organization/organization-list) - A list of organizations that a user is a member of.
-
-### Admin membership management
-
-As an admin, you can manage organization memberships
-
-- Membership list
-- Domains
-- Invitations (invite form, invitations list)
-- Membership suggestions
-- Membership requests
 
 ## Frequently asked questions (FAQ)
 
