Move content to tabs

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -35,27 +35,39 @@ Integrating Firebase with Clerk gives you the benefits of using Firebase's featu
 
 The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase Auth. This enables you to leverage Clerk's prebuilt components, auth provider options, and more, while accessing Firebase products like Firestore with a session validated by Firebase Auth.
 
-To get started:
+To get enable the integration:
 
 1. Navigate to the Clerk Dashboard.
 2. In the sidebar, select **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)**.
 3. Toggle the **Firebase** integration on. The configuration modal will appear. Keep this open while you configure your Firebase project.
 
-To configure the integration, you can either:
-- [upload your Firebase project's service account key JSON file to configure the integration automatically](#upload-service-account-key)
-- [manually provide the required information about your Firebase project](#configure-firebase-manually)
+Next, configure your integration.
 
-#### Upload service account key
+<Tabs type="configuration" items={["Configure automatically (Recommended)", "Configure manually"]}>
+  <Tab>
+  You should configure your integration automatically by generating a service account key from your Firebase project. To do so:
 
-To generate a service account key:
+  1. In your Firebase project, visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk).
+  2. Near the bottom of the page, select the **Generate new private key** button.
+  3. In the modal that pops up, select the **Generate key** button to download the JSON file that contains your service account key.
+  4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key** button and upload the JSON file you downloaded.
+  5. The appropriate fields in the configuration modal will be filled in automatically. Select **Apply changes** to save your configuration.
 
-1. In your Firebase project, visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk).
-2. Near the bottom of the page, select the **Generate new private key** button.
-3. In the modal that pops up, select the **Generate key** button to download the JSON file that contains your service account key.
-4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key** button and upload the JSON file you downloaded.
-5. The appropriate fields in the configuration modal will be filled in automatically. Select **Apply changes** to save your configuration.
+  Select the **Manual configuration** tab above these instructions if you don't want to use a service account key.
+  </Tab>
+  <Tab>
+  You should use a service account key to configure your integration automatically.
 
-See [the manual configuration instructions](#configure-firebase-manually) if you don't want to use a service account key.
+  If you want to manually configure your Firebase integration, you must provide Clerk with the following information about your Firebase project:
+
+  - **Service account email** – Find this in your Firebase project's [Google Cloud Console](https://console.cloud.google.com/projectselector2/iam-admin/serviceaccounts?consoleUI=FIREBASE&hl=fi&supportedpurview=project), or in the `client_email` field of your service account key JSON file.
+  - **Firestore project ID** – Find this under **Project Settings** in the Firebase dashboard, or in the `project_id` field of your service account key JSON file.
+  - **Private Key** – You can [generate this manually](https://firebase.google.com/docs/cloud-messaging/auth-server#:~:text=In%20the%20Firebase%20console%2C%20open,confirm%20by%20clicking%20Generate%20Key.), or find it in the `private_key` field of your service account key JSON file.
+  - **Firebase database URL** *(Optional)* – To find this:
+    - In the Firebase dashboard, select **Realtime Database**
+    - Select the **Data** tab, and select the copy button to add the database URL to your clipboard.
+  </Tab>
+</Tabs>
 
 ### Enable authentication in Firebase
 
@@ -170,19 +182,6 @@ export default function FirebaseUI() {
 }
 ```
 </Steps>
-
-## Configure Firebase manually
-
-You should use a service account key to [configure your integration automatically](#configure-your-project).
-
-If you want to manually configure your Firebase integration, you must provide Clerk with the following information about your Firebase project:
-
-- **Service account email** – Find this in your Firebase project's [Google Cloud Console](https://console.cloud.google.com/projectselector2/iam-admin/serviceaccounts?consoleUI=FIREBASE&hl=fi&supportedpurview=project), or in the `client_email` field of your service account key JSON file.
-- **Firestore project ID** – Find this under **Project Settings** in the Firebase dashboard, or in the `project_id` field of your service account key JSON file.
-- **Private Key** – You can [generate this manually](https://firebase.google.com/docs/cloud-messaging/auth-server#:~:text=In%20the%20Firebase%20console%2C%20open,confirm%20by%20clicking%20Generate%20Key.), or find it in the `private_key` field of your service account key JSON file.
-- **Firebase database URL** *(Optional)* – To find this:
-  - In the Firebase dashboard, select **Realtime Database**
-  - Select the **Data** tab, and select the copy button to add the database URL to your clipboard
 
 ## Next steps
 
