Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -45,7 +45,7 @@ Next, configure your integration.
 
 <Tabs type="configuration" items={["Configure automatically (Recommended)", "Configure manually"]}>
   <Tab>
-  You should configure your integration automatically by generating a service account key from your Firebase project. To do so:
+  The recommended way to configure your integration is to use a service account key provided by Firebase in order to configure the integration *automatically*. To do so:
 
   1. In your Firebase project, visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk).
   2. Near the bottom of the page, select the **Generate new private key** button.
@@ -53,10 +53,9 @@ Next, configure your integration.
   4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key** button and upload the JSON file you downloaded.
   5. The appropriate fields in the configuration modal will be filled in automatically. Select **Apply changes** to save your configuration.
 
-  Select the **Manual configuration** tab above these instructions if you don't want to use a service account key.
+  Select the **Configure manually** tab above these instructions if you do not want to use a service account key.
   </Tab>
   <Tab>
-  You should use a service account key to configure your integration automatically.
 
   If you want to manually configure your Firebase integration, you must provide Clerk with the following information about your Firebase project:
 
@@ -151,6 +150,8 @@ const db = getFirestore(app);
 // Connect to Firebase auth
 const auth = getAuth(app);
 
+// Remove this if you do not have Firestore set up
+// for your Firebase app
 const getFirestoreData = async () => {
   const docRef = doc(db, "example", "example-document");
   const docSnap = await getDoc(docRef);
