Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -79,6 +79,8 @@ To use Firebase auth, ensure authentication is enabled in your Firebase dashboar
 
 ### Add a Security Rule to your Firestore database (optional)
 
+Adding the [Cloud Firestore](https://firebase.google.com/docs/firestore/quickstart) feature in your Firebase application is optional.
+
 To use Firestore with Clerk, ensure that you have defined [Security Rules](https://firebase.google.com/docs/firestore/security/get-started) that allow authenticated requests to access your database. For example:
 
 ```bash
