add section about custom flows

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -7,7 +7,7 @@ description: Learn about how to create and manage Clerk organizations and their 
 
 Organizations play a crucial role in structuring user management within your application, particularly in B2B, B2B2C, and collaborative environments. Think of a platform like GitHub Teams, or even departments within a company - organizations are a way to group and manage users and their access to resources.
 
-By utilizing organizations, you can assign specific roles and permissions to users, allowing you to finely control access to different parts of your application. Whether you're managing projects, coordinating teams, or facilitating partnerships, organizations offer a flexible and scalable way to structure user access and permissions.
+By utilizing organizations, you can assign specific roles and permissions to users, allowing you to finely control access to different parts of your application. Whether you are managing projects, coordinating teams, or facilitating partnerships, organizations offer a flexible and scalable way to structure user access and permissions.
 
 <Callout type="info">
   To explore organizations in Clerk, check out this demo repo:
@@ -24,11 +24,11 @@ To enable organizations:
 2. In the navigation sidebar, select **Organizations Settings**.
 3. Toggle on **Enable Organizations**.
 
-Once organizations are enabled, you will be presented with the default settings, roles, and permissions that are applied to all organizations in that application instance.
+Once organizations are enabled, you will be presented with the default settings, roles, and permissions that are applied to all organizations in that application instance. The following sections will explain these settings in more detail.
 
 ### Roles and permissions
 
-Roles determine a user's level of access and permissions within an organization. [Learn more about how roles and permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions).
+Roles determine a user's level of access and permissions within an organization. [Learn more about how roles and permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions)
 
 ### Default membership limit
 
@@ -67,13 +67,13 @@ Once enabled for your application, when an organization admin is creating a veri
 
 #### Membership requests
 
-Membership requests are requests from users who want to join the organization. A membership request is created when a user sees a suggestion to join an organization and clicks the **Request to join** button. Therefore, membership requests are only available for organizations that have the [**Verified domains** feature enabled](#verified-domains) and the [**Automatic suggestions** feature enabled in both the Dashboard and for the specific domain](#suggestions).
+Membership requests are requests from users who want to join an organization. A membership request is created when a user sees a suggestion to join an organization and clicks the **Request to join** button. Therefore, membership requests are only available for organizations that have the [**Verified domains** feature enabled](#verified-domains) and the [**Automatic suggestions** feature enabled in both the Dashboard and for the specific domain](#suggestions).
 
 ## Active organization
 
 There are two types of accounts that a user can have in a Clerk application: a personal account and an organization account. A personal account is the default account type, and it is created when a user signs up for your application. An organization account is created when a user creates or joins an organization within your application.
 
-When a user is a member of an organization, they can switch between their personal account and their organization account. The organization account that a user is currently viewing is called the active organization. The active organization determines which organization-specific data the user can access and which roles and permissions they have within the organization.
+When a user is a member of an organization, they can switch between their personal account and an organization account. The organization account that a user is currently viewing is called the **active organization**. The active organization determines which organization-specific data the user can access and which roles and permissions they have within the organization.
 
 When a user signs in to your application, they are viewing their personal account and no organization is set as active. Even if they are a member of only one organization, they must explicitly switch to that organization to set it as active.
 
@@ -85,7 +85,7 @@ Organization invitations are a way to invite users to join an organization. When
 
 By default, only admins can invite users to an organization.
 
-This feature requires that **Email address** is enabled as an [identifier](/docs/authentication/configuration/sign-up-sign-in-options#identifiers), as Clerk uses the user's email address to send the invitation.. You can still disable **Email address* as an authentication option if you don't want users to be able to sign-in with their email address.
+This feature requires that **Email address** is enabled as an [identifier](/docs/authentication/configuration/sign-up-sign-in-options#identifiers), as Clerk uses the user's email address to send the invitation. You can still disable **Email address** as an authentication option if you do not want users to be able to sign-in with their email address.
 
 To configure your application's **Email address** settings:
 
@@ -96,18 +96,26 @@ To configure your application's **Email address** settings:
 
 ## Organization management
 
-As the application owner, you have full control over the organizations within your application. You can create, update, and delete organizations, as well as manage their members and settings.
+As the application owner, you have control over all of the organizations within your application - both those created by you and those created by your users. You can create, update, and delete organizations, as well as manage their members and settings.
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations).
-2. In the navigation sidebar, select **Organizations**. Here, you can view and manage all organizations within your application - both those created by you and those create by your users.
+2. In the navigation sidebar, select **Organizations**. Here, you can view and manage all organizations within your application.
 3. Select a specific organization to view its details, members, and settings. Here, you can update the organization's name, slug, and logo. You can also set the organization's [membership limit](#how-many-organizations-can-i-create) and public and private metadata.
 
-For managing organizations and their members in your application, Clerk provides a set of [prebuilt components](/docs/components/overview):
+For managing organizations in your application, Clerk provides a set of prebuilt components:
 
 - [`<CreateOrganization />`](/docs/components/organization/create-organization) - A form for a user to create a new organization.
 - [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization. Out of the box, this component's **General** tab displays the organization's information and the **Leave organization** button. Admins will be able to see the **Update profile** button, **Verified domains** section, and **Delete organization** button. The **Members** tab shows the organization's members along with their join dates and roles. Admins will have the ability to invite a member, change a member's role, or remove them from the organization. Admins will have tabs within the **Members** tab to view the organization's invitations and requests.
 - [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s). Out of the box, this component will show notifications to the user if they have organization invitations or suggestions. Admins will be able to see notifications for requests to join an organization.
 - [`<OrganizationList />`](/docs/components/organization/organization-list) - A list of organizations that a user is a member of.
+
+If Clerk's prebuilt components don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API. Currently, there are guides available for:
+
+- [Creating an organization](/docs/organizations/creating-organizations)
+- [Updating an organization](/docs/organizations/updating-organizations)
+- [Creating an infinite paginated list of memberships](/docs/organizations/viewing-memberships)
+- [Inviting users to an organization](/docs/organizations/inviting-users), which also includes code for creating a custom list of invitations
+- [Managing memberships](/docs/organizations/managing-roles), which includes code for updating and deleting a user's membership, for inviting a user, and for creating a custom list of memberships, invitations, and requests
 
 ## Frequently asked questions (FAQ)
 
@@ -128,3 +136,4 @@ With the Free plan, you can create up to 100 MAOs across your entire account. Ea
 With the Pro plan, you can create up to 100 MAOs across your entire account. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. So if you have 20 applications, each of them can have 5 organizations (100 total across your account), and then each additional organization costs $1.00 per month.
 
 If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
+
