add faq for how do i set an active org

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -137,3 +137,9 @@ With the Pro plan, you can create up to 100 MAOs across your entire account. Eac
 
 If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
 
+### How do I set an organization as the active organization?
+
+The easiest way is to use Clerk's [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component. Once a user selects an organization, that organization is set as the active organization.
+
+You can also use the `setActive()` method, which is available on the [`Clerk`](/docs/references/javascript/clerk/session-methods#set-active) object and is returned by the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
+
