--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -29,7 +29,7 @@ Once organizations are enabled, you will be presented with the default settings,
 
 Roles determine a user's level of access and permissions within an organization. [Learn more about how roles and permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions)
 
-### Default membership limit
+### Membership limit
 
 There is no limit to the number of organizations a user can be a member of.
 
