--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -108,7 +108,7 @@ For managing organizations in your application, Clerk provides a set of prebuilt
 - [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s). Out of the box, this component will show notifications to the user if they have organization invitations or suggestions. Admins will be able to see notifications for requests to join an organization.
 - [`<OrganizationList />`](/docs/components/organization/organization-list) - A list of organizations that a user is a member of.
 
-If Clerk's prebuilt components don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API. Currently, there are guides available for:
+If Clerk's prebuilt components don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API. Some useful guides include:
 
 - [Creating an organization](/docs/organizations/creating-organizations)
 - [Updating an organization](/docs/organizations/updating-organizations)
