remove faq; remove large explanations of components

--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -12,7 +12,9 @@ description: Clerk's <OrganizationSwitcher /> component is used to enable the ab
   src="/docs/images/ui-components/component-org_switcher.svg"
 />
 
-The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable the ability to switch between available organizations the user may be part of in your application.
+The [`<OrganizationSwitcher />`][orgswitcher-ref] component allows a user to switch between their accounts - their personal account and their organization account(s). This component is useful for applications that have a multi-tenant architecture, where users can be part of multiple organizations.
+
+Out of the box, this component will show notifications to the user if they have organization [invitations](/docs/organizations/overview#organization-invitations) or [suggestions](/docs/organizations/overview#suggestions). Admins will be able to see notifications for [requests](/docs/organizations/overview#membership-requests) to join an organization.
 
 ## `<OrganizationSwitcher />` properties
 
