--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -78,6 +78,35 @@ When a user signs in to your application, they are viewing their personal accoun
 
 The easiest way to allow users to switch between their personal account and their organization account is to use Clerk's [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component. Once a user selects an organization, that organization is set as the active organization.
 
+You can also use the `setActive()` method, which is available on the [`Clerk`](/docs/references/javascript/clerk/session-methods#set-active) object and is returned by the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
+
+## Create an organization
+
+### Application owner
+
+You can create organizations in the Clerk Dashboard or in your application. To create an organization in the Clerk Dashboard:
+
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations).
+2. In the navigation sidebar, select **Organizations**.
+3. Select the **Create Organization** button.
+4. Enter the organization's name and slug. The slug is a unique identifier for the organization and is used in URLs. Select the organization's owner from the list of users in your application. The owner is the user who will be the organization's admin.
+
+The number of monthly active organizations (MAOs) you can create depends on your [Clerk plan](/pricing).
+
+With the Free plan, you can create up to 100 MAOs across your entire account. Each MAO can have up to 5 members. So if you have 20 different Clerk applications, each of them can have 5 organizations (100 total across your account).
+
+With the Pro plan, you can create up to 100 MAOs across your entire account. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. So if you have 20 applications, each of them can have 5 organizations (100 total across your account), and then each additional organization costs $1.00 per month.
+
+If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
+
+### Application user
+
+Users can create organizations within your application. When a user creates an organization, they become the organization's admin. As the organization's admin, they have full control over the organization, including the ability to update the organization's settings, invite users to join the organization, and manage the organization's members.
+
+A user within one of your applications can create up to 100 organizations in that application. This limit is separate from the number of [organizations *you* can create](#application-owner) across your entire account.
+
+The easiest way to allow users to create organizations is to use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) component. This component provides a form for users to create a new organization.
+
 ## Organization invitations
 
 Organization invitations are a way to invite users to join an organization. When a user is invited to an organization, they will receive an email with a link to accept the invitation. Once they accept the invitation, they will be added as a member of the organization.
@@ -104,8 +133,8 @@ As the application owner, you have control over all of the organizations within 
 For managing organizations in your application, Clerk provides a set of prebuilt components:
 
 - [`<CreateOrganization />`](/docs/components/organization/create-organization) - A form for a user to create a new organization.
-- [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization. Out of the box, this component's **General** tab displays the organization's information and the **Leave organization** button. Admins will be able to see the **Update profile** button, **Verified domains** section, and **Delete organization** button. The **Members** tab shows the organization's members along with their join dates and roles. Admins will have the ability to invite a member, change a member's role, or remove them from the organization. Admins will have tabs within the **Members** tab to view the organization's invitations and requests.
-- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s). Out of the box, this component will show notifications to the user if they have organization invitations or suggestions. Admins will be able to see notifications for requests to join an organization.
+- [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization.
+- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s).
 - [`<OrganizationList />`](/docs/components/organization/organization-list) - A list of organizations that a user is a member of.
 
 If Clerk's prebuilt components don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API. Some useful guides include:
@@ -115,30 +144,3 @@ If Clerk's prebuilt components don't meet your specific needs or if you require 
 - [Creating an infinite paginated list of memberships](/docs/organizations/viewing-memberships)
 - [Inviting users to an organization](/docs/organizations/inviting-users), which also includes code for creating a custom list of invitations
 - [Managing memberships](/docs/organizations/managing-roles), which includes code for updating and deleting a user's membership, for inviting a user, and for creating a custom list of memberships, invitations, and requests
-
-## Frequently asked questions (FAQ)
-
-### How many organizations can a user belong to?
-
-There is no limit to the number of organizations a user can be a member of.
-
-### How many organizations can my users create?
-
-A user within one of your applications can create up to 100 organizations in that application. This limit is separate from the number of organizations *you* can create across your entire account.
-
-### How many organizations can I create?
-
-The number of monthly active organizations (MAOs) you can create depends on your [Clerk plan](/pricing).
-
-With the Free plan, you can create up to 100 MAOs across your entire account. Each MAO can have up to 5 members. So if you have 20 different Clerk applications, each of them can have 5 organizations (100 total across your account).
-
-With the Pro plan, you can create up to 100 MAOs across your entire account. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. So if you have 20 applications, each of them can have 5 organizations (100 total across your account), and then each additional organization costs $1.00 per month.
-
-If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
-
-### How do I set an organization as the active organization?
-
-The easiest way is to use Clerk's [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component. Once a user selects an organization, that organization is set as the active organization.
-
-You can also use the `setActive()` method, which is available on the [`Clerk`](/docs/references/javascript/clerk/session-methods#set-active) object and is returned by the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook.
-
