--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to Add an Onboarding Flow for your Application
-description: Leverage Clerk’s customizable session tokens, publicMetadata and Next’s Middleware to create a robust onboarding experience within a few lines of code.
+title: Add custom onboarding to your authentication flow
+description: Leverage Clerk’s customizable session tokens, public metadata, and Middleware to create a robust onboarding experience.
 ---
 
 # How to Add an Onboarding Flow for your Application
