--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -3,7 +3,7 @@ title: Add custom onboarding to your authentication flow
 description: Leverage Clerk’s customizable session tokens, public metadata, and Middleware to create a robust onboarding experience.
 ---
 
-# How to Add an Onboarding Flow for your Application
+# Add custom onboarding to your authentication flow
 
 As part of your onboarding flow, you may want to collect extra information from your user and use it to drive your application state. Let’s walk through a quick example using Next.js and TypeScript to show you how simple implementing an onboarding flow can be.
 
