--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -10,7 +10,7 @@ As part of your onboarding flow, you may want to collect extra information from 
 In this guide, you will learn how to:
 
 1. Add custom claims to your session token
-2. Configure your middleware to read session data
+2. Configure your Middleware to read session data
 3. Update with the user’s onboarding state
 
 To see a working example, check out our sample demonstration app [here](https://sample-onboarding-app.clerkpreview.com/).
