--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -32,7 +32,12 @@ Let’s get started!
 
 For this guide, you will use an `onboardingComplete` property in the user's public metadata to track their onboarding status. But first, you need to add a custom claim to the session token that will allow you to access the user's public metadata in your Middleware.
 
-First, navigate to [Sessions](https://dashboard.clerk.com/last-active/sessions?_gl=1*1bx2kkm*_gcl_au*MTcwMzAwNTE2LjE3MDQ5MTA2MjAuMTQ0NTAzMDk3Ny4xNzA1MDM3Njk5LjE3MDUwMzc3MDU.*_ga*OTkyMTU1NTM2LjE2ODk0NzAzMDU.*_ga_1WMF5X234K*MTcxMjE5NDgyMC40OS4xLjE3MTIxOTU0ODQuMC4wLjA.) in your Clerk Dashboard and click the ‘Edit’ button. In the modal that opens, there will be a window where you can augment your session token with custom claims.
+To edit the session token:
+
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions). 
+2. In the navigation sidebar, select **Sessions**.
+3. In the **Customize session token** section, select the **Edit** button. 
+4. In the modal that opens, you can add any claim to your session token that you need. For this guide, add the following:
 
 In there, add the following and hit save:
 
