--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -11,7 +11,7 @@ In this guide, you will learn how to:
 
 1. Add custom claims to your session token
 2. Configure your Middleware to read session data
-3. Update with the user’s onboarding state
+3. Update the user’s onboarding state
 
 To see a working example, check out our sample demonstration app [here](https://sample-onboarding-app.clerkpreview.com/).
 
