--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -50,7 +50,7 @@ To edit the session token:
 
 If you haven’t already, we can make the public metadata type information accessible to our application by adding the following to src/types/globals.d.ts:
 
-```ts
+```ts filename="types/globals.d.ts"
 export {};
 
 declare global {
