--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -66,7 +66,7 @@ We have just added custom data to our session token in the Clerk Dashboard and m
 
 ## Configure your Middleware to read session data
 
-Clerk's authMiddleware() allows you ton configure access to your routes with fine grained control. You can also retrieve claims directly from the session and redirect your user accordingly. [Learn More](https://clerk.com/docs/references/nextjs/auth-middleware#usage)
+Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware#usage) allows you to configure access to your routes with fine grained control. It also allows you to retrieve claims directly from the session and redirect your user accordingly.
 
 Add the code sample below to your `src/middleware.ts` file:
 
